samples/_failures_safe/1761308836_b1e1ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_840ca8b8.c: In function ‘main’:
./samples/SAFE/__tmp_840ca8b8.c:145:12: error: expected ‘;’ at end of input
  145 |     addEdge
      |            ^
      |            ;
./samples/SAFE/__tmp_840ca8b8.c:145:5: error: expected declaration or statement at end of input
  145 |     addEdge
      |     ^~~~~~~
